some clean coding renaming